# SUSTech_CS301_Project

./: .clang-format  .gitignore  LICENSE  README.md
BINARY/: GBK12.FON  GBK16.FON  (+2 more)
CMAKE/: .cproject  .gitignore  .project  CMakeLists.txt  Project.ioc  STM32F103RCTX_FLASH.ld  lv_conf.h
CMAKE/Core/Inc/: 24cxx.h  24l01.h  album_scene.h  album_scene.hpp  bmp.h  calc_algo.hpp  calc_scene.hpp  chat_scene.hpp  chat_select_scene.hpp  config.h  delay.h  emoji.hpp  emoji_scene.hpp  fatfs.h  font.h  fontupd.h  framework.h  gif.h  icon.h  lcd.h  led.h  main.h  main_scene.hpp  malloc.h  mmc_sd.h  myiic.h  piclib.h  remote.h  scene.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  text.h  tjpgd.h  touch.h  w25qxx.h
CMAKE/Core/Src/: calc_algo.cpp  image_source.cpp  main.c  main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.cpp  test.cpp
CMAKE/Core/Src/frameworks/: album_scene.cpp  calc_scene.cpp  chat_scene.cpp  chat_select_scene.cpp  emoji_scene.cpp  framework.cpp  main_scene.cpp  scene.cpp
CMAKE/Core/Src/lib/: 24l01.c  bmp.c  delay.c  fatfs.cpp  fontupd.c  gif.c  lcd.c  lcd.cpp  led.cpp  malloc.c  mmc_sd.c  myiic.c  piclib.c  remote.c  spi.c  text.c  tjpgd.c  usart.c  w25qxx.c
CMAKE/Core/Src/lv_driver/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
CMAKE/Core/Src/tests/: test_24.cpp  test_img.cpp  test_pic.c  test_sd.cpp
CMAKE/FATFS/exfuns/: exfuns.c  exfuns.h  fattester.c  fattester.h  fattester_bk.c  fattester_bk.h
CMAKE/FATFS/src/: ff.h
CMAKE/FATFS/src/option/: cc936.c
CMAKE/cmake/: lvgl.cmake  st-project.cmake  st-project_my.cmake
(+21 files in other folders)
